--- a/src/view/includes/option.jade
+++ b/src/view/includes/option.jade
@@ -7,5 +7,5 @@ div.PV-option(ng-show="showOpt")
     input.close(
       type="button",
       ng-click="showOpt = false"
-      value="&times;")
+      value="×")
 button(data-show-config="", ng-click="showOpt = true", title='設定')
