--- a/src/view/includes/bookmark.jade
+++ b/src/view/includes/bookmark.jade
@@ -4,7 +4,7 @@ div.PV-bookmark(ng-show="bookmarkForm")
     input.close(
       type="button",
       ng-click="bookmarkForm = false"
-      value="&times;")
+      value="×")
 button(
   ng-click="showBookmark(model.illustId)",
   data-bookmark='{{ model.bookmarkState }}',
