--- a/src/view/includes/fav.jade
+++ b/src/view/includes/fav.jade
@@ -26,7 +26,7 @@ div.PV-fav(
   input.close(
     type="button",
     ng-click="showFav = false"
-    value="&times;")
+    value="×")
 button(
   ng-click="showFav = !myPage",
   data-favorite='{{ model.favoriteState }}',
