--- a/src/view/includes/config.jade
+++ b/src/view/includes/config.jade
@@ -31,3 +31,8 @@ details(open)
           min="220",
           max="700")
         span.helper {{ config.panelWidth }}
+    p
+      input.clear(
+        type="button",
+        value="設定をリセットする",
+        ng-click="clear()")
