--- a/src/view/includes/about.jade
+++ b/src/view/includes/about.jade
@@ -4,7 +4,7 @@ details
     dl
       dt Name
       dd
-        a(href="https://sites.google.com/site/8th713lab/Home/chrome/pixivviewer") #{name}
+        a(href="https://sites.google.com/site/8th713lab/Home/chrome/pixivviewer") pixivViewer
         | &ensp;-&ensp;#{version}
     dl
       dt Author
@@ -18,7 +18,7 @@ details
         a(href="http://angularjs.org") AngularJS
         | &ensp;-&ensp;MIT License
       dd
-        a(href="http://underscorejs.org") Underscore.js
+        a(href="http://lodash.com/") Lo-Dash
         | &ensp;-&ensp;MIT License
     dl
       dt Fonts
