--- a/src/view/filter.jade
+++ b/src/view/filter.jade
@@ -1,9 +1,9 @@
 form.PVF(pv-filter="")
-  input.icon.sorted(
+  input.PV-icon.sorted(
     ng-model="sorted",
     type="checkbox",
     title="ブックマーク数でソート")
-  input.icon.filtered(
+  input.PV-icon.filtered(
     ng-model="filtered",
     type="checkbox",
     title="閾値以下の画像を表示しない")
