--- a/src/view/includes/about.jade
+++ b/src/view/includes/about.jade
@@ -1,30 +1,32 @@
 details
   summary About
-  div.inner
-    dl
-      dt Name
-      dd
+  .inner
+    dl.desc
+      dt.desc-header Name
+      dd.desc-body
         a(href="https://sites.google.com/site/8th713lab/Home/chrome/pixivviewer") pixivViewer
-        | &ensp;-&ensp;#{version}
-    dl
-      dt Author
-      dd
+        | &nbsp;-&nbsp;#{version}
+    dl.desc
+      dt.desc-header Author
+      dd.desc-body
         a(href="http://twitter.com/8th_713") 8th713
-        | &ensp;-&ensp;
+        | &nbsp;-&nbsp;
         a(href="mailto:8th713@gmail.com") 8th713@gmail.com
-    dl
-      dt Library and Framework
-      dd
+    dl.desc
+      dt.desc-header Library and Framework
+      dd.desc-body
         a(href="http://angularjs.org") AngularJS
-        | &ensp;-&ensp;MIT License
-      dd
+        | &nbsp;-&nbsp;
+        a(href="https://github.com/angular/angular.js/blob/master/LICENSE") MIT License
+      dd.desc-body
         a(href="http://lodash.com/") Lo-Dash
-        | &ensp;-&ensp;MIT License
-    dl
-      dt Fonts
-      dd
-        a(href="http://fortawesome.github.com/Font-Awesome/") Font Awesome
-        | &ensp;-&ensp;
-        a(href="http://creativecommons.org/licenses/by/3.0/") CC BY 3.0
-      dd scissored by&ensp;
+        | &nbsp;-&nbsp;
+        a(href="https://github.com/bestiejs/lodash/blob/master/LICENSE.txt") MIT License
+    dl.desc
+      dt.desc-header Fonts
+      dd.desc-body
+        a(href="http://fortawesome.github.io/Font-Awesome/") Font Awesome
+        | &nbsp;-&nbsp;
+        a(href="http://fortawesome.github.io/Font-Awesome/license/") SIL OFL 1.1
+      dd.desc-body scissored by&nbsp;
         a(href="http://fontello.com/") Fontello
