--- a/src/view/includes/help.jade
+++ b/src/view/includes/help.jade
@@ -1,6 +1,6 @@
 details
   summary Shortcuts
-  div.inner
+  .inner
     table
       tr
         td 次の画像へ移動
@@ -31,26 +31,38 @@ details
         td
           kbd Shift + Space
       tr
-        td 10点つける
-        td
-          kbd S
-      tr
-        td ブクマフォーム表示
-        td
-          kbd B
-      tr
         td パネル表示切り替え
         td
           kbd H
-      tr
-        td 画像を保存
-        td
-          kbd D
       tr
         td 画像表示切り替え
         td
           kbd F
       tr
+        td ブクマフォーム表示
+        td
+          kbd B
+      tr
+        td コメント表示
+        td
+          kbd C
+      tr
+        td 画像を保存
+        td
+          kbd D
+      tr
+        td 10点つける
+        td
+          kbd S
+      tr
+        td Twitter へ投稿
+        td
+          kbd T
+      tr
         td 設定
         td
           kbd ?
+      tr
+        td 各種ダイアログを閉じる
+        td
+          kbd ESC
