--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,8 +1,20 @@
+@import 'variables';
+
 @import 'mixins/flexbox';
 @import 'mixins/goodparts';
 
-@import 'includes/page';
-@import 'includes/viewer';
+@import 'components/buttons';
+@import 'components/icon';
+@import 'components/popup';
+
+@import 'includes/base';
+@import 'includes/view';
 @import 'includes/panel';
-@import 'includes/popup';
+@import 'includes/profile';
+@import 'includes/fav';
+@import 'includes/comments';
+@import 'includes/option';
 @import 'includes/sorter';
+@import 'includes/filter';
+
+@import 'layout';
