--- a/src/view/includes/fav.jade
+++ b/src/view/includes/fav.jade
@@ -1,33 +1,22 @@
-div.PV-fav(
-  ng-show="showFav && !model.myPage")
-  div.label
-    span 公開設定
-    input(
-      type="checkbox",
-      ng-model="restrict",
-      ng-true-value="1",
-      ng-false-value="0")
-  div.btn-group
-    input.btn(
-      type="button",
-      ng-hide="model.favoriteState",
-      ng-click="addFav()",
-      value="追加")
-    input.btn(
-      type="button",
-      ng-show="model.favoriteState",
-      ng-click="modFav()",
-      value="変更")
-    input.btn(
-      type="button",
-      value="解除",
-      ng-show="model.favoriteState",
-      ng-click="removeFav()")
-  input.close(
-    type="button",
-    ng-click="showFav = false"
-    value="×")
-button(
-  ng-click="showFav = !myPage",
-  data-favorite='{{ model.favoriteState }}',
-  title='お気に入り')
+div(ng-controller="FavCtrl")
+  .PV-fav.PV-popup(ng-show="showFav")
+    .PV-popup-header
+      h4.PV-popup-title お気に入り編集
+      button.PV-close(ng-click="hide()")
+    .PV-popup-body
+      .rich-center
+        span.label 公開設定
+        input.btn.btn-flex.publicness(
+          type="checkbox",
+          ng-model="restrict",
+          ng-true-value="1",
+          ng-false-value="0")
+      .rich-center(ng-hide="model.favoriteState")
+        button.btn.btn-flex.btn-primary(ng-click="addFav()") 追加
+      .rich-center(ng-show="model.favoriteState")
+        button.btn.btn-flex.btn-primary(ng-click="modFav()") 変更
+        button.btn.btn-flex.btn-danger(ng-click="removeFav()") 解除
+  button.PV-icon(
+    ng-click="!model.myPage && show()",
+    data-favorite='{{ model.favoriteState }}',
+    title='お気に入り')
