--- a/assets/fontello/css/fontello-codes.css
+++ b/assets/fontello/css/fontello-codes.css
@@ -13,6 +13,7 @@
 .icon-resize-small:before { content: '\e003'; } /* '' */
 .icon-twitter:before { content: '\e010'; } /* '' */
 .icon-filter:before { content: '\e00f'; } /* '' */
+.icon-ok-squared:before { content: '\e011'; } /* '' */
 .icon-sort-alt-down:before { content: '\e00e'; } /* '' */
 .icon-thumbs-up:before { content: '\e009'; } /* '' */
 .icon-download:before { content: '\e006'; } /* '' */
