--- a/assets/fontello/css/fontello.css
+++ b/assets/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?72517435');
-  src: url('../font/fontello.eot?72517435#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?72517435') format('woff'),
-       url('../font/fontello.ttf?72517435') format('truetype'),
-       url('../font/fontello.svg?72517435#fontello') format('svg');
+  src: url('../font/fontello.eot?93193331');
+  src: url('../font/fontello.eot?93193331#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?93193331') format('woff'),
+       url('../font/fontello.ttf?93193331') format('truetype'),
+       url('../font/fontello.svg?93193331#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?72517435#fontello') format('svg');
+    src: url('../font/fontello.svg?93193331#fontello') format('svg');
   }
 }
 */
@@ -64,6 +64,7 @@
 .icon-resize-small:before { content: '\e003'; } /* '' */
 .icon-twitter:before { content: '\e010'; } /* '' */
 .icon-filter:before { content: '\e00f'; } /* '' */
+.icon-ok-squared:before { content: '\e011'; } /* '' */
 .icon-sort-alt-down:before { content: '\e00e'; } /* '' */
 .icon-thumbs-up:before { content: '\e009'; } /* '' */
 .icon-download:before { content: '\e006'; } /* '' */
