--- a/src/less/components/icon.less
+++ b/src/less/components/icon.less
@@ -48,12 +48,14 @@
   // Tool icons
   &[data-info]:before     { content: '\e008'; }
   &[data-rate]:before     { content: '\e009'; }
+  &[data-qr]:before       { content: '\e011'; }
   &[data-tags]:before     { content: '\e00a'; }
   &[data-desc]:before     { content: '\e00b'; }
   &[data-comments]:before { content: '\e00c'; }
 
   &[data-info='true'],
   &[data-rate='true'],
+  &[data-qr='true'],
   &[data-tags='true'],
   &[data-desc='true'] {
     color: @success;
