--- a/src/less/includes/profile.less
+++ b/src/less/includes/profile.less
@@ -86,6 +86,38 @@
   }
 }
 
+.PV-question {
+  font-weight: bold;
+}
+
+.PV-stats {
+  width: 100%;
+
+  .text {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    text-align: left;
+    background-color: transparent;
+    color: inherit;
+    font-family: @base-font;
+    cursor: pointer;
+
+    &:hover {
+      color: @primary;
+    }
+  }
+
+  &.answered {
+    pointer-events: none;
+    cursor: default;
+  }
+
+  .active {
+    color: @success;
+  }
+}
+
 .PV-tag {
   .tag {
     margin: 0 4px 0 0;
