Fix the timing of the image resize.

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -11,8 +11,7 @@
                ng-click="move($event)")
         img.PV-img(ng-hide="msg"
                    ng-click="move($event)"
-                   pv-grab=""
-                   pv-fit="config.fit"
+                   pv-grab="" pv-fit=""
                    pv-load="load()"
                    pv-err="err()"
                    pv-src="pix.getSrc(page)")
