--- a/src/less/partials/main.less
+++ b/src/less/partials/main.less
@@ -4,7 +4,8 @@
   position: absolute;
   top: 0;
   left: @barWidth;
-  width: calc(@wid);
+  width: -webkit-calc(@wid);
+  width:         calc(@wid);
   height: 100vh;
 
   display: flex;
